*Empty MediaWiki Message*

--- a/დავით_ბოდბელი.mw
+++ b/დავით_ბოდბელი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 '''დავით ბოდბელი''' (''ვაჩნაძე''), († [[1790]]), [[დავითგარეჯა|დავითგარეჯის მონასტრის]] არქიმანდრიტი [[1751]]-[[1762]], [[1764]]-იდან [[ბოდბის მონასტერი|ბოდბის]] ეპისკოპოსი მიტროპოლიტის წოდებით, საეკლესიო მწერალი, მწიგნობარი.
 
 განათლება მიიღო დავითგარეჯის მონასტერში. მისი მასწავლებლები იყვნენ [[იოსები (ვაჩნაძე)]] და [[იოანე (ჯორჯაძე)]]. არაერთი ხელნაწერი წიგნი შემატა მან დავითგარეჯისა და ბოდბის ბიბლიოთეკებს, ზოგი თვითონ გადაწერა, ზოგი საკუთარი ხარჯით გადააწერინა ან იყიდა. [[1790]] [[მხედრული|მხედრულით]] გადააწერინა "დიდი სჯულის კანონი" და დაუთმო მას რამდენიმე ტერმინის განმარტება.
