*Empty MediaWiki Message*

--- a/დავით_გარეჯელი.mw
+++ b/დავით_გარეჯელი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 '''დავით გარეჯელი''', ერთ-ერთი ასურელი მამა. [[საქართველო|საქართველოში]] მოსულა ქ. ანტიოქიიდან VI საუკუნის I ნახევარში და გარეჯის მრავალმთის სანახებში დაუარსებია მონასრეტი ([[დავითგარეჯა]]), რომლის პირველი წინამძღვარი თვითონ ყოფილა. 
 
 დავით გარეჯელის მოღვაწეობამ ხელი შეუწყო საქართველოში ქრისტიანული რელიგიის დაცვა-განმტკიცებას და ჯერ კიდევ შემორჩენილი წარმართი მოსახლეობის გაქრისტიანებას. დავითის ინიციატივით მისმა მოწაფეებმა [[დოდო]] და [[ლუკიანე]] გარეჯელებმა სანახებშივე დააარსეს ახალი მონასტრები. 
