*Empty MediaWiki Message*

--- a/დავითი_(ქორეპისკოპოსი).mw
+++ b/დავითი_(ქორეპისკოპოსი).mw
@@ -1,4 +1,9 @@
-'''დავითი''', [[კახეთის სამეფო  | კახეთის]] ქორეპისკოპოსი (მთავარი) ) 976-1010, [[კვირიკე II | კვირიკე II-ის]] ძე. მნიშვნელოვანი ციხესიმაგრეები ჰქონდა [[ქართლის სამეფო | ქართლშიც]]. ებრძოდა [[საქართველო | საქართველოს]] მეფე [[ბაგრატ III | ბაგრატ III-ს]], რომელიც [[კახეთ-ჰერეთი | კახეთ-ჰერეთის]] შემოერთებისათვის იღვწოდა. დაახლოებით 1010, დავითის მემკვიდრის [[კვირიკე III | კვირიკე III-ის]] დროს, ეს ბრძოლა [[კახეთ-ჰერეთი |კახეთ-ჰერეთის]] [[საქართველოს სამეფო | საქართველოს სამეფოსთან]] შეერთებით დამთავრდა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
+'''დავითი''', [[კახეთის სამეფო  | კახეთის]] ქორეპისკოპოსი (მთავარი) ) [[976]]-[[1010]], [[კვირიკე II | კვირიკე II-ის]] ძე. მნიშვნელოვანი ციხესიმაგრეები ჰქონდა [[ქართლის სამეფო | ქართლშიც]]. ებრძოდა [[საქართველო | საქართველოს]] მეფე [[ბაგრატ III | ბაგრატ III-ს]], რომელიც [[კახეთ-ჰერეთი | კახეთ-ჰერეთის]] შემოერთებისათვის იღვწოდა. დაახლოებით 1010, დავითის მემკვიდრის [[კვირიკე III | კვირიკე III-ის]] დროს, ეს ბრძოლა [[კახეთ-ჰერეთი |კახეთ-ჰერეთის]] [[საქართველოს სამეფო | საქართველოს სამეფოსთან]] შეერთებით დამთავრდა.
 
 
 [[კატეგორია:ქართველები]]
