*Empty MediaWiki Message*

--- a/დავით_მიძნაძორელი.mw
+++ b/დავით_მიძნაძორელი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 '''დავით მიძნაძორელი''', IX საუკუნის I ნახევრის [[ქართველები|ქართველი]] საეკლესიო მოღვაწე, [[მიძნაძორის მონასტრი|მიძნაძორის მონასტრის]] ([[კლარჯეთი]]) მაშენებელი და პირველი წინამძღვარი. მისი მოწაფეები იყვნენ  [[ილარიონი (ქართლის)|ილარიონი]] და [[ბარეთელთა მონასტერი|ბარეთელთის მონასტრის]] (კლარჯეთი) მაშენებელი და წინამძღვარი [[ზაქარია ბარეთელთელი|ზაქარია]]. [[გიორგი მერჩულე]] დავით მიძნაძორელს დიდს და მონასტერთა მაშენებელს უწოდებს.
 
 
