*Empty MediaWiki Message*

--- a/დავით_ტბელი.mw
+++ b/დავით_ტბელი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 '''დავით ტბელი''', X საუკუნის II ნახევრის [[ქართველები|ქართველი]] მთარგმნელი და სასულიერო მოღვაწე, [[ტბეთი|ტბეთის]] ეპისკოპოსი. ბერძნულიდან თარგმნა [[კიმენი|კიმენური]] და [[მეტაფრასი|მეტაფრასული]]  [[ჰაგიოგრაფია|ჰაგიოგრაფიული]] ძეგლები. [[ეფრემ მცირე|ეფრემ მცირის]] ცნობით, მას უთარგმნია  [[სიმეონ ლოგოთეტი|სიმეონ ლოგოთეტის]] მეტაფრასები. მასვე ეკუთვნის  [[გრიგოლ ღვთისმეტყველი|გრიგოლ ღვთისმეტყველის]] რამდენიმე თხზულების თარგმანი. ძველ წყაროებში დავით ტბელი იხსენიება ეპისკოპოს [[სტეფანე სანანოისძე ჭყონდიდელი|სტეფანე სანანოისძესთან]] ერთად.
 
 
