*Empty MediaWiki Message*

--- a/დავით_ქსნის_ერისთავი.mw
+++ b/დავით_ქსნის_ერისთავი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 '''დავით ქსნის ერისთავი''' ( † [[1774]]), [[ერისთავი (თანამდებობა)| ერისთავი]] [[1753]]-[[1754]]. მხარს უჭერდა [[თეიმურაზ II|თეიმურაზ II-სა]] და [[ერეკლე II|ერეკლე II-ს]]. თავი გამოიჩინა ხუნძახის ბატონის [[ნურსალ-ბეგი|ნურსალ-ბეგის]] წინააღმდეგ [[მჭადიჯვრის ბრძოლა 1754|მჭადიჯვრის]] ([[1754]]) და [[ყვარლის ბრძოლა 1755| ყვარლის]] ([[1755]]) ბრძოლებში. 
 
 [[1755]] მონაწილეობდა ერეკლე II-ის ლაშქრობაში გამდგარი ხევსურეთის წინააღმდეგ. შემდეგში, როგორც ჩანს, თანაუგრძნობდა ერეკლე II-ის ოპოზიციას, [[1770]] მეფესთან დააბეზღეს როგორც მოღალატე, მაგრამ თავი გაიმართლა.
