*Empty MediaWiki Message*

--- a/გიორგი_დანელია.mw
+++ b/გიორგი_დანელია.mw
@@ -1,7 +1,7 @@
 [[სურათი:GeorgiDanelia1.jpg|thumb|გიორგი დანელია]]
-'''გიორგი დანელია''' (*[[25 აგვისტო]], [[1930]]) ქართველი კინო-რეჟისორი, ცნობილი თავისი "ნაღვლიანი კომედიებით", როგორც თავად უწოდებს საკუთარ შემოქმედებას.
+'''გიორგი დანელია''' (*[[25 აგვისტო]], [[1930]]) ქართველი კინორეჟისორი, ცნობილი თავისი "ნაღვლიანი კომედიებით", როგორც თავად უწოდებს საკუთარ შემოქმედებას.
 
-სწავლობდა მოსკოვის არქიტექტურულ ინსტიტუტში და ერთი პერიოდი არქიტექტორად მუშაობდა. მისი დოკუმენტური ფილმი "მე დავდივარ მოსკოვში" [[მიხალკოვი, ნიკიტა|ნიკიტა მიხალკოვის]] მონაწილეობით [[ხრუშოვის დათბობა|ხრუშოვის დათბობის]] პერიოდის ერთ-ერთი ყველაზე დამახასიათებელი აღწერაა. დანელიას ყველაზე პოპულარული ფილმებია "მიმინო" (1977), ქართველი პილოტის თავაგადასავლებზე მოსკოვში, და "შემოდგომის მარათონი" (1980), თარჯიმანზე, რომელიც ცოლსა და საყვარელს შორის ორ-ცეცხლს შუაა მოქცეული. 1986 წელს ის იღებს არცთუ მთლად მეცნიერულ ფანტასტიკას "კინ-ძა-ძა". დანელიას ფილმებში თითქმის მუდმივად ჩნდება მისი იმჟამინდელი მეუღლე ლიუბოვ სოკოლოვა, რომელიც გინესის წიგნშია შეტანილი, ყველაზე მრავალრიცხოვანი გადაღებებით კინოს ისტორიაში, და ასევე მისი მეგობარი [[ლეონოვი, ევგენი|ევგენი ლეონოვი]]. დანელიას სახალხო არტისტის წოდება მიენიჭა 1990 წელს.
+სწავლობდა მოსკოვის არქიტექტურულ ინსტიტუტში და ერთი პერიოდი არქიტექტორად მუშაობდა. მისი დოკუმენტური ფილმი "მე დავდივარ მოსკოვში" [[მიხალკოვი, ნიკიტა|ნიკიტა მიხალკოვის]] მონაწილეობით [[ხრუშჩოვის დათბობა|ხრუშჩოვის დათბობის]] პერიოდის ერთ-ერთი ყველაზე დამახასიათებელი აღწერაა. დანელიას ყველაზე პოპულარული ფილმებია "მიმინო" (1977), ქართველი პილოტის თავაგადასავლებზე მოსკოვში, და "შემოდგომის მარათონი" (1980), თარჯიმანზე, რომელიც ცოლსა და საყვარელს შორის ორ-ცეცხლს შუაა მოქცეული. 1986 წელს ის იღებს არცთუ მთლად მეცნიერულ ფანტასტიკას "კინ-ძა-ძა". დანელიას ფილმებში თითქმის მუდმივად ჩნდება მისი იმჟამინდელი მეუღლე ლიუბოვ სოკოლოვა, რომელიც გინესის წიგნშია შეტანილი, ყველაზე მრავალრიცხოვანი გადაღებებით კინოს ისტორიაში, და ასევე მისი მეგობარი [[ლეონოვი, ევგენი|ევგენი ლეონოვი]]. დანელიას სახალხო არტისტის წოდება მიენიჭა 1990 წელს.
 
 მოგვიანებით დანელია კინორეჟისორ გალინა იურკოვაზე ქორწინდება; რამდენიმე ანიმაციურ პროექტში იღებს მონაწილეობას და რუსეთის კინოაკადემიის მიერ ცხოვრებისეული მიღწევებისთვის საპატიო ჯილდო მიენიჭა.
 
@@ -23,8 +23,9 @@
 * ''გზა ნავმისადგომთან'' (Путь к причалу) (1962)
 * ''სერიოჟა'' (1960)
 
-
+[[კატეგორია:ქართველები]]
 [[კატეგორია:ქართველი კინორეჟისორები]]
+[[კატეგორია:დაბადებული 1930]] 
 
 [[en:Georgi Daneliya]]
 [[ru:Данелия, Георгий Николаевич]]
