*Empty MediaWiki Message*

--- a/გიორგი_დანელია.mw
+++ b/გიორგი_დანელია.mw
@@ -1,5 +1,5 @@
 [[სურათი:GeorgiDanelia1.jpg|thumb|გიორგი დანელია]]
-'''გიორგი დანელია''' (*[[25 აგვისტო]], [[1930]]) ქართველი კინორეჟისორი, ცნობილი თავისი "ნაღვლიანი კომედიებით", როგორც თავად უწოდებს საკუთარ შემოქმედებას.
+'''გიორგი დანელია''' (*[[25 აგვისტო]], [[1930]], [[თბილისი]]) ქართველი კინორეჟისორი, ცნობილი თავისი "ნაღვლიანი კომედიებით", როგორც თავად უწოდებს საკუთარ შემოქმედებას.
 
 სწავლობდა მოსკოვის არქიტექტურულ ინსტიტუტში და ერთი პერიოდი არქიტექტორად მუშაობდა. მისი დოკუმენტური ფილმი "მე დავდივარ მოსკოვში" [[მიხალკოვი, ნიკიტა|ნიკიტა მიხალკოვის]] მონაწილეობით [[ხრუშჩოვის დათბობა|ხრუშჩოვის დათბობის]] პერიოდის ერთ-ერთი ყველაზე დამახასიათებელი აღწერაა. დანელიას ყველაზე პოპულარული ფილმებია "მიმინო" (1977), ქართველი პილოტის თავაგადასავლებზე მოსკოვში, და "შემოდგომის მარათონი" (1980), თარჯიმანზე, რომელიც ცოლსა და საყვარელს შორის ორ-ცეცხლს შუაა მოქცეული. 1986 წელს ის იღებს არცთუ მთლად მეცნიერულ ფანტასტიკას "კინ-ძა-ძა". დანელიას ფილმებში თითქმის მუდმივად ჩნდება მისი იმჟამინდელი მეუღლე ლიუბოვ სოკოლოვა, რომელიც გინესის წიგნშია შეტანილი, ყველაზე მრავალრიცხოვანი გადაღებებით კინოს ისტორიაში, და ასევე მისი მეგობარი [[ლეონოვი, ევგენი|ევგენი ლეონოვი]]. დანელიას სახალხო არტისტის წოდება მიენიჭა 1990 წელს.
 
