*Empty MediaWiki Message*

--- a/დარეჯან_ბატონიშვილი.mw
+++ b/დარეჯან_ბატონიშვილი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დარეჯან'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დარეჯან]]
+|}</small>
+
 '''დარეჯან ბატონიშვილი''' (''ბაგრატიონი'') (* [[1670]]   ―   †  [[1740]]), მწიგნობარი, დიპლომატი, მეფე [[არჩილ II|არჩილ II-ის]] ასული.
 
 [[1685]]-იდან ცხოვრობდა და მოღვაწეობდა [[მოსკოვი|მოსკოვში]]. არჩილ II-ის გარდაცვალების შემდეგ ქართული ახალშენის მეთაური გახდა. დარეჯან ბატონიშვილმა დიდი როლი ითამაშა რუსეთ-საქართველოს [[1721]]-[[1723]] სამხედრო-პოლიტიკური კავშირის შექმნაში, ბოლომდე ერთგულად იღვწოდა რუსეთ-საქართველოს ურთიერთობის განვითარებისათვის. დარეჯან ბატონიშვილის მოსკოვის სასახლეში ქართველები ეცნობოდნენ რუსეთის მოწინავე საზოგადოების აზრს. მისი ინიციატივით [[1733]]-[[1736]] სოფ. ვსესვიატსკოეში ძველი კარის ეკლესიის ნაცვლად ააგეს ახალი ტაძარი, რომელიც ქართველთა კულტურულ-რელიგიური ცენტრი გახდა.
