*Empty MediaWiki Message*

--- a/დარეჯანი_(იმერეთის_დედოფალი).mw
+++ b/დარეჯანი_(იმერეთის_დედოფალი).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დარეჯან'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ დარეჯან]]
+|}</small>
+
 '''დარეჯანი''' ( †   [[1668]]), მეფე [[თეიმურაზ I|თეიმურაზ I-ი]]ს ასული, [[ზურაბ არაგვის ერისთავი|ზურაბ არაგვის ერისთავის]] მეუღლე. ზურაბის გარდაცვალების შემდეგ თეიმურაზ I-მა დარეჯანი [[იმერეთის სამეფო|იმერეთის]] მეფე [[ალექსანდრე III|ალექსანდრე III-ს]] მიათხოვა. ამ უკანასკნელის გარდაცვალების  შემდეგ ([[1660]]) დარეჯანმა შეთქმულება მოაწყო, ტახტიდან ჩამოაგდო [[ბაგრატ IV, ალექსანდრე III-ის ძე|ბაგრატ IV]], ქმრად შეირთო ბაგრატიონთა შორეული ნათესავი ვახტანგი (ჭუჭუნასშვილად წოდებული) და იგი მეფედ გამოაცხადა. მის დროს დარეჯანი სამეფოს ფაქტობრივი გამგებელი იყო. მოკლეს ფეოდალებმა.
 
 
