*Empty MediaWiki Message*

--- a/დარეჯან_დედოფალი.mw
+++ b/დარეჯან_დედოფალი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დარეჯან'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დარეჯან]]
+|}</small>
+
 '''დარეჯანი''' (* დაახლოებით [[1726]]  ―   †  [[8 ნოემბერი]], [[1807]]), ქართლ-კახეთის დედოფალი, მეფე [[ერეკლე II|ერეკლე II-ს]] მესამე ცოლი ([[1750]]-დან), [[კაცია I დადიანი|კაცია I დადიანის]] ასული. 
 
 დარეჯანი ყოველ ღონეს ხმარობდა, რომ სამეფო ტაზტზე თავისი შვილები დაემკვიდრებინა. ამ მიზნით ერეკლე II-ს სიცოცხლის უკანასკნელ წლებში კანონიც კი მიაღებინა, რომლის ძალითაც გიორგის (ერეკლეს უფროსი ვაჟი მეორე ცოლისაგან) შემდეგ მეფობა მის უფროს ვაჟზე კი არა, ძმაზე - დარეჯანის შვილ იულონზე უნდა გადასულიყო (ეს წესი შემდეგ ერეკლე II-მ თვითონვე გააუქმა). [[საქართველო|საქართველოს]] [[რუსეთი|რუსეთთან]] შეერთების შემდეგ, [[1803]] დარეჯანი ოჯახის წევრებთან ერთად რუსეთში გადაასახლეს. გარდაიცვალა იქვე. დასაფლავებულია [[ალექსანდრე ნეველი|ალექსანდრე ნეველის]] ტაძარში.
