--- a/დემეტრე.mw
+++ b/დემეტრე.mw
@@ -2,11 +2,11 @@
 
 
 * [[დემეტრე I]] - საქართველოს მეფე
-* [[დემეტრე (დიმიტრი)I]] - აფხაზთა VI მეფე
-* [[დემეტრე II თავდადებული]] - საქართველოს მეფე
+* [[დემეტრე I (დიმიტრი)]] - აფხაზთა VI მეფე
+* [[დემეტრე II, თავდადებული]] - საქართველოს მეფე
 * [[დემეტრე II]] - აფხაზთა სამეფოს (დასავლეთ საქართველოს) მეფე
 * [[დემეტრე III]] - აფხაზთა სამეფოს (დასავლეთ საქართველოს) მეფე
-* [[დემეტრე გურული]] - გურიის სამთავროს გამგებელი
+* [[დემეტრე გურიელი]] - გურიის სამთავროს გამგებელი
 * [[დემეტრე ვიპატოსი]] - ქართლის ერისმთავარ გუარამ კურაპალატის უმცროსი ძე
 * [[დემეტრე I მგალობელი]] - მგალობელი, მწიგნობარი, კალიგრაფი, პედაგოგი
 * [[დემეტრე უფლისწული]] - საქართველოს მეფის გიორგი I-ისა და ალდე დედოფლის ძე
