*Empty MediaWiki Message*

--- a/დემეტრე_I_(აფხაზთა_მეფე).mw
+++ b/დემეტრე_I_(აფხაზთა_მეფე).mw
@@ -1,4 +1,8 @@
-'''დემეტრე''' (''დიმიტრი'') '''I''' , [[აფხაზთა მეფეთა დივანი (ქრონიკა)|აფხაზთა მეფეთა დივანის (ქრონიკის)]] მიხედვით, აფხაზთა მე-6 "მეფე" (ერისთავი), ბაკურის ძე.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დემეტრე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დემეტრე]]
+|}</small>
+'''დემეტრე I''' (''დიმიტრი''), [[აფხაზთა მეფეთა დივანი (ქრონიკა)|აფხაზთა მეფეთა დივანის (ქრონიკის)]] მიხედვით, აფხაზთა მე-6 "მეფე" (ერისთავი), ბაკურის ძე.
 
 
 [[კატეგორია:აფხაზთა სამეფოს მეფეები]]
