*Empty MediaWiki Message*

--- a/დემეტრე_II_(აფხაზთა_მეფე).mw
+++ b/დემეტრე_II_(აფხაზთა_მეფე).mw
@@ -1,4 +1,8 @@
-'''დემეტრე''' (''დიმიტრი'') '''II''', [[აფხაზთა სამეფო|აფხაზთა სამეფოს]] (დასავლეთ საქართველოს) [[მეფე]] (* დაახლოებით [[825]] ―   †   [[861]]), [[ლეონ II|ლეონ II-ის]] ძე. 
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დემეტრე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დემეტრე]]
+|}</small>
+'''დემეტრე''' (''დიმიტრი'') '''II''', (* დაახლოებით [[825]] ―   †   [[861]]), [[აფხაზთა სამეფო|აფხაზთა სამეფოს]] (დასავლეთ საქართველოს) [[მეფე]],[[ლეონ II|ლეონ II-ის]] ძე. 
 
 ენერგიულად იბრძოდა ახლად შექმნილი სამეფოს დამოუკიდებლობის დასაცავად. IX საუკუნის 40-იან წლებში არაერთხელ დაამარცხა დასაცლეთ საქართველოში შემოსული ბიზანტიელთა ლაშქარი. [[853]] წინ აღუდგა საქართველოში შემოჭრილ არაბთა სარდალს [[ბუღა თურქი|ბუღა თურქს]]. იგი შემდეგშიაც განაგრძობდა ბრძოლას ქართლიდან არაბთა განდევნისა და საქართველოს გაერთიანებისათვის. 
 
@@ -7,3 +11,5 @@
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:აფხაზთა სამეფოს მეფეები]]
+[[კატეგორია:დაბადებული  825]]
+[[კატეგორია:გარდაცვლილი 861]]
