*Empty MediaWiki Message*

--- a/დემეტრე_III.mw
+++ b/დემეტრე_III.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დემეტრე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დემეტრე]]
+|}</small>
 '''დემეტრე'''  ''(დიმიტრი)'' '''III''', [[აფხაზთა სამეფო|აფხაზთა სამეფოს]] (დასავლეთ საქართველოს) [[მეფე]] დაახლოებით [[967]]-[[975]], [[გიორგი II, აფხაზთა (დას. საქართველოს) მეფე|გიორგი II-ის]] ძე, [[ლეონ III|ლეონ III-ი]]ს ძმა და მემკვიდრე.
 
 აქტიურად იბრძოდა საქართველოში [[ჰეგემონია|ჰეგემონიის]] მოპოვებისათვის. ფეოდალურმა ოპოზიციამ დაუპირისპირა ძმა [[თეოდოსი III|თეოდოსი]], რომელსაც მხარს უჭერდა მესხეთის, ქართლისა და კახეთის აზნაურთა ნაწილი. დემეტრე III-მ დაამარცხა თეოდოსის მომხრე [[აზნაური|აზნაურები]], შემდეგ მოტყუებით შეიპყრო თეოდოსი, თვალები დასთხარა და შეძლო დროებით აღედგინა აფხაზეთის სამეფოს ჰეგემონია საქართველოს გაერთიანებისათვის ბრძოლაში. მაშინ მეამბოხე ფეოდალებმა მის წინააღმდეგ აამხედრეს მეორე ძმა, დემეტრე III-მ ეს ცდაც ჩაახშო.
