*Empty MediaWiki Message*

--- a/დემეტრე_გურიელი.mw
+++ b/დემეტრე_გურიელი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დემეტრე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დემეტრე]]
+|}</small>
 '''დემეტრე გურიელი''', [[გურიის სამთავრო|გურიის სამთავროს]] ფაქტობრივი გამგებელი [[1659]]-[[1660]], იმერეთის მეფე [[1660]]. 
 
 დემეტრე გურიელი ახალგაზრდობაში ბერად იყო შემდგარი. [[1658]] იმერეთის მეფე [[ალექსანდრე III|ალექსანდრე III-მ]] და  [[ვამეყ III დადიანი|ვამეყ III დადიანმა]] [[ბანძის ბრძოლა 1658|ბანძის ბრძოლაში]] დაამარცხეს [[ლიპარიტ III დადიანი]] და [[ქაიხოსრო I გურიელი]] და გურიის სამთავრო ტახტზე ბრმა [[სიმონ II გურიელი|სიმონ გურიელი]] (სიმონ II) აიყვანეს, მას მონასტრიდან გამოყვანილი დემეტრე გურიელი აშვილეს, რომელიც ფაქტობრივად განაგებდა გურიის სამთავროს. 
