*Empty MediaWiki Message*

--- a/დემეტრე_ვიპატოსი.mw
+++ b/დემეტრე_ვიპატოსი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დემეტრე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დემეტრე]]
+|}</small>
 '''დემეტრე ვიპატოსი''', ქართლის ერისმთავარ [[გუარამი |გუარამ]] [[კურაპალატი|კურაპალატის]] უმცროსი ძე. 
 
 ვიპატოსის ბიზანტიის საკარისკაცო ტიტული მინიჭებული უნდა ჰქონდეს [[მავრიკიოსი|მავრიკიოს]] კეისრის მიერ VI საუკუნის 90-იან წლებში.  დემეტრე ვიპატოსი იყო [[მცხეთა|მცხეთის]] [[ჯვარი (მცხეთა)|ჯვრის ტაძრის]] ერთ-ერთი აღმაშენებელი. ტაძრის აღმოსავლეთ კედელზე სამი [[ქტიტორი|ქტიტორის]] კომპოზიციაში, შემონახულია მისი რელიეფური გამოსახულება.
