*Empty MediaWiki Message*

--- a/დემეტრე_მგალობელი.mw
+++ b/დემეტრე_მგალობელი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დემეტრე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დემეტრე]]
+|}</small>
 '''დემეტრე I მგალობელი''', XVII საუკუნის II ნახევრის და XVIII საუკუნის I ნახევრის [[ქართველები|ქართველი]] მგალობელი, მწიგნობარი, კალიგრაფი, პედაგოგი.
 
 მოღწეულია ავტობიოგრაფიული ხელნაწერი "გულანი", რომელიც მას [[1714]]-[[1716]] გადაუწერია კახეთში [[ერეკლე I|ერეკლე I-ის]] ასულის მარიამის (ცნობილი პოეტი ქალის, [[ჰიმნოგრაფია|ჰიმნოგრაფის]]) დახმარებით.
