*Empty MediaWiki Message*

--- a/დემეტრე_უფლისწული.mw
+++ b/დემეტრე_უფლისწული.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დემეტრე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დემეტრე]]
+|}</small>
 '''დემეტრე უფლისწული''', [[საქართველო|საქართველოს]] მეფის [[გიორგი I|გიორგი I-ისა]] და [[ალდე დედოფალი|ალდე დედოფლის]] ძე. ტახტს ეცილებოდა თავის ნახევარძმას [[ბაგრატ IV|ბაგრატ IV-ს]].
 
 მამის გარდაცვალების შემდეგ დემეტრე უფლისწული და დედამისი საუფლისწულო მამულში [[ანაკოფია|ანაკოფიაში]] ცხოვრობდნენ. მეფის ცენტრალიზებული ხელისუფლების მოწინააღმდეგე დიდგვარიანმა აზნაურებმა დემეტრე უფლისწული ბაგრატ IV-ს დაუპირისპირეს და მისი გამეფება სცადეს, მაგრამ დამარცხდნენ. ვერც ბაგრატ IV-მ და მისმა მომხრეებმა შეძლეს დემეტრე უფლისწულის შემორიგება.
