--- a/ოპერაციული_სისტემა.mw
+++ b/ოპერაციული_სისტემა.mw
@@ -1,1 +1,65 @@
-#REDIRECT [[სიმბიან (ოპერაციული სისტემა)]]
+'''ოპერაციული სისტემა''' სპეციალური კომპიუტერული პროგრამაა, რომელიც მართავს ურთიერთობას სხვადასხვა სამომხმარებლო პროგრამულ პაკეტებს (software), ასევე კომპიუტერის სისტემის შემადგენელ მოწყობილობასა (hardware) და ამ სისტემის მომხარებელს შორის.
+
+ნებისმიერ ოპერაციული სისტემის ფუძეა კერნელი, სოფტვეას პირველი შრე, რომელიც კომპიუტერის მეხსიერებაში იტვირთება სისტემის ჩართვის მომენტში. კერნელი შემდეგ აძლევს გასაღებს სხვადასხვა ძირეულ სერვისებს ყველა დანარჩენ სისტემებსა და სამომხმარებლო პროგრამულ პაკეტებთან. 
+
+{{ესკიზი}}
+
+[[კატეგორია:ოპერაციული სისტემები]]
+[[კატეგორია:კომპიუტერული მეცნიერება]]
+
+[[als:Betriebssystem]]
+[[ar:نظام تشغيل]]
+[[an:Sistema operatibo]]
+[[ast:Sistema operativu]]
+[[bg:Операционна система]]
+[[zh-min-nan:Chok-gia̍p hē-thóng]]
+[[be:Апэрацыйная сыстэма]]
+[[bs:Operativni sistem]]
+[[ca:Sistema operatiu]]
+[[cs:Operační systém]]
+[[da:Styresystem]]
+[[de:Betriebssystem]]
+[[et:Operatsioonisüsteem]]
+[[es:Sistema operativo]]
+[[eo:Operaciumo]]
+[[fa:سیستم عامل]]
+[[fr:Système d'exploitation]]
+[[ga:Córas oibriúcháin]]
+[[gl:Sistema operativo]]
+[[ko:운영 체제]]
+[[hr:Operacijski sustav]]
+[[id:Sistem Operasi]]
+[[ia:Systema de operation]]
+[[is:Stýrikerfi]]
+[[it:Sistema operativo]]
+[[he:מערכת הפעלה]]
+[[csb:Òperacjowô systema]]
+[[ku:Sîstema şixulandinê]]
+[[lv:Operacionālā sistēma]]
+[[lt:Operacinė sistema]]
+[[hu:Operációs rendszer]]
+[[mk:Оперативен систем]]
+[[mg:Mpandrindra milina]]
+[[ml:ഓപറേറ്റിങ്ങ്‌ സിസ്റ്റം]]
+[[ms:Sistem pengoperasian]]
+[[nl:Besturingssysteem]]
+[[nds:Bedriefssysteem]]
+[[ja:オペレーティングシステム]]
+[[no:Operativsystem]]
+[[nn:Operativsystem]]
+[[pl:System operacyjny]]
+[[pt:Sistema operativo]]
+[[ro:Sistem de operare]]
+[[ru:Операционная система]]
+[[simple:Operating system]]
+[[sk:Operačný systém]]
+[[sl:Operacijski sistem]]
+[[fi:Käyttöjärjestelmä]]
+[[sv:Operativsystem]]
+[[tl:Operating system]]
+[[ta:இயங்கு தளம்]]
+[[th:ระบบปฏิบัติการ]]
+[[vi:Hệ điều hành]]
+[[tr:İşletim sistemi]]
+[[uk:Операційна система]]
+[[zh:操作系统]]
