*Empty MediaWiki Message*

--- a/არტ-ნუვო.mw
+++ b/არტ-ნუვო.mw
@@ -1,5 +1,5 @@
 [[სურათი:nbgtbilisi.jpg|thumb|270px|ეროვნული ბანკის შენობა, ქართული არტ-ნუვო არქიტექტურაში]]
-'''არტ-ნუვო''' (Art Nouveau, ფრანგ. "ახალი ხელოვნება") სტილია ხელოვნებაში, არქიტექტურასა და დიზაინში, რომელმაც პოპულარობის პიკს მე-20 საუკუნის დასაწყისში მიაღწია. სხვა უფრო ლოკალური ტერმინები, რომელმაც წინაპირობა შეუქმნა რადიკალურ, როფორმისტულ შიკს მე-20 საუკუნის მოდერნიზმში იყო ''ჯუგენდსტილი'' გერმანიაში და ნიდელანდებში და ''სეცეციონსტილი'' ვენაში, სადაც პროგრესული ხელოვნები და დიზაინერები სალონურ გამოფენათა მიმდინარეობას გამოეყვნენ, საკუთარი თავის უფრო კონგენიალურ გარემოებებში ეგზიბიციისთვის.
+'''არტ-ნუვო''' (Art Nouveau, ფრანგ. "ახალი ხელოვნება") სტილია ხელოვნებაში, არქიტექტურასა და დიზაინში, რომელმაც პოპულარობის პიკს მე-20 საუკუნის დასაწყისში მიაღწია. სხვა უფრო ლოკალური ტერმინები, რომელმაც წინაპირობა შეუქმნა რადიკალურ, როფორმისტულ შიკს მე-20 საუკუნის მოდერნიზმში იყო ''იუგენდსტილი'' გერმანიაში და ნიდელანდებში და ''სეცესიონის სტილი'' ვენაში, იტალიაში "ლიბერტის სტილი", ესპანეთში - "მოდერნიზმი", სადაც პროგრესული ხელოვნები და დიზაინერები სალონურ გამოფენათა მიმდინარეობას გამოეყვნენ, საკუთარი თავის უფრო კონგენიალურ გარემოებებში ეგზიბიციისთვის.
 
 რუსეთში ეს მიმდინარეობა სამხატვრო ჟურნალი "ხელოვნების სამყარო" ირგვლივ ტრიალებდა, რომელმაც რევოლუციური "ბალეტ-რუსე" (Ballets Russes) წარმოშვა. იტალიაში "სტილ-ლიბერტი" მიმდინარეობას საფუძველი ჩაუყარა ლონდონურმა მაღაზიამ "Liberty & Co", რომელიც თანამედროვე დიზაინს ავრცელებდა კომერციულ ასპექტში გამოსახული ხელოვნების ნიმუშებით. [[კატალონია|კატალონიაში]], მიმდინარეობა სახელით "მოდერნიზმო" [[ბარსელონა|ბარსელონაში]] ვითარდებოდა და მისი ყველაზე ცნობილი პრაქტიკოსი ანტონი გაუდი გახლდათ.
 
