*Empty MediaWiki Message*

--- a/არტ-ნუვო.mw
+++ b/არტ-ნუვო.mw
@@ -1,17 +1,17 @@
 [[სურათი:nbgtbilisi.jpg|thumb|270px|ეროვნული ბანკის შენობა, ქართული არტ-ნუვო არქიტექტურაში]]
-'''არტ-ნუვო''' (Art Nouveau, ფრანგ. "ახალი ხელოვნება") სტილია ხელოვნებაში, არქიტექტურასა და დიზაინში, რომელმაც პოპულარობის პიკს მე-20 საუკუნის დასაწყისში მიაღწია. სხვა უფრო ლოკალური ტერმინები, რომელმაც წინაპირობა შეუქმნა რადიკალურ, როფორმისტულ შიკს მე-20 საუკუნის მოდერნიზმში იყო ''იუგენდსტილი'' გერმანიაში და ნიდელანდებში და ''სეცესიონის სტილი'' ვენაში, იტალიაში "ლიბერტის სტილი", ესპანეთში - "მოდერნიზმი", სადაც პროგრესული ხელოვნები და დიზაინერები სალონურ გამოფენათა მიმდინარეობას გამოეყვნენ, საკუთარი თავის უფრო კონგენიალურ გარემოებებში ეგზიბიციისთვის.
+'''არტ-ნუვო''' (Art Nouveau, ფრანგ. "ახალი ხელოვნება") სტილია ხელოვნებაში, არქიტექტურასა და დიზაინში, რომელმაც პოპულარობის პიკს მე-20 საუკუნის დასაწყისში მიაღწია. სხვა უფრო ლოკალური ტერმინები, რომელმაც წინაპირობა შეუქმნა რადიკალურ, როფორმისტულ შიკს მე-20 საუკუნის მოდერნიზმში იყო "იუგენდსტილი"' გერმანიაში და ნიდელანდებში და "სეცესიონსტილი" ვენაში, "ლიბერტი" იტალიაში, ხოლო "მოდერნიზმო" ესპანეთში, სადაც პროგრესული ხელოვნები და დიზაინერები სალონურ გამოფენათა მიმდინარეობას გამოეყვნენ, საკუთარი თავის უფრო კონგენიალურ გარემოებებში წარმოჩენისთვის.
 
-რუსეთში ეს მიმდინარეობა სამხატვრო ჟურნალი "ხელოვნების სამყარო" ირგვლივ ტრიალებდა, რომელმაც რევოლუციური "ბალეტ-რუსე" (Ballets Russes) წარმოშვა. იტალიაში "სტილ-ლიბერტი" მიმდინარეობას საფუძველი ჩაუყარა ლონდონურმა მაღაზიამ "Liberty & Co", რომელიც თანამედროვე დიზაინს ავრცელებდა კომერციულ ასპექტში გამოსახული ხელოვნების ნიმუშებით. [[კატალონია|კატალონიაში]], მიმდინარეობა სახელით "მოდერნიზმო" [[ბარსელონა|ბარსელონაში]] ვითარდებოდა და მისი ყველაზე ცნობილი პრაქტიკოსი ანტონი გაუდი გახლდათ.
+რუსეთში ეს მიმდინარეობა სამხატვრო ჟურნალი "ხელოვნების სამყარო" ირგვლივ ტრიალებდა, რომელმაც რევოლუციური "ბალეტ-რუს" (Ballets Russes) წარმოშვა. იტალიაში "სტილ-ლიბერტი" მიმდინარეობას საფუძველი ჩაუყარა ლონდონურმა მაღაზიამ "Liberty & Co", რომელიც თანამედროვე დიზაინს ავრცელებდა კომერციულ ასპექტში გამოსახული ხელოვნების ნიმუშებით. [[კატალონია|კატალონიაში]] "მოდერნიზმო" ძირითადად [[ბარსელონა|ბარსელონაში]] ვითარდებოდა და მისი ყველაზე ცნობილი პრაქტიკოსი [[გაუდი, ანტონიო|ანტონიო გაუდი]] გახლდათ.
 
 ==არტ-ნუვოს კარიერა==
 [[სურათი:MackmurdoWren1883.gif|thumb|left|ართურ მაკმურდოს წიგნის გარეკანი, 1883]]
-მიუხედავად იმისა, რომ არტ-ნუვომ კლიმაქსი 1892-1902 წლებში განიცადა, მისი პირველი ნიშნები უკვე 1880-იან წლებში შეიმჩნეოდა "არტს-ენდ-კრაფტს" (Arts and Crafts) მიმდინარეობის პროგრესულ დიზაინერულ ნიმუშებში, როგორიცაა არქიტექტორ-დიზაინერ ართურ მაკმურდოს 1883 წელს გამოქვეყნებული წიგნის გარეკანის დიზაინი ნარკვევისთვის სერ ქრისტოფერ ვრენის ქალაქურ ეკლესიებზე. ამავე პერიოდის ზოგიერთი თავისუფალი მოტივის ჭედური ლითონის ნამუშევრები და ბრტყელი ყვავილოვანი ტექსტილის დიზაინერული ნიმუშებიც შეიძლება მიკუთვნებულ იქნას პროგრესულ მიმდინარეობაზე, თუმცა მათი უმრავლესობა ასევე მაღალი ვიქტორიანული მცენარეული ჩუქურთმის გავლენაც უნდა იყოს.
+მიუხედავად იმისა, რომ არტ-ნუვომ კლიმაქსს 1892-1902 დეკადაში მიაღწია, მისი პირველი ნიშნები უკვე 1880-იან წლებში შეიმჩნეოდა "არტს-ენდ-კრაფტს" (Arts and Crafts) მიმდინარეობის პროგრესულ დიზაინერულ ნიმუშებში, როგორიცაა არქიტექტორ-დიზაინერ [[მაკმურდო, ართურ|ართურ მაკმურდოს]] 1883 წელს გამოქვეყნებული წიგნის გარეკანის დიზაინი ნარკვევისთვის სერ ქრისტოფერ ვრენის ქალაქურ ეკლესიებზე. ამავე პერიოდის ზოგიერთი თავისუფალი მოტივის ჭედური ლითონის ნამუშევრები და ბრტყელი ყვავილოვანი ტექსტილის დიზაინერული ნიმუშებიც შეიძლება მიკუთვნებულ იქნას პროგრესულ მიმდინარეობაზე, თუმცა მათი უმრავლესობა ასევე მაღალი ვიქტორიანული მცენარეული ჩუქურთმის გავლენაც უნდა იყოს.
 
-სახელწოდება "არტ-ნუვო" მომდინარეობს ავავე სახელის მაღაზიისგან პარიზში, "Maison de l'Art Nouveau", იმ დროისთვის სემუელ ბინის განკარგულებაში, სადაც გასაყიდად გამოფენილი იყო სხვადასხვა ნივთები, რომლებიც ამ განსაკუთრებული დიზაინში იყო შესრულებული.
+სახელწოდება "არტ-ნუვო" მომდინარეობს ავავე სახელის მაღაზიისგან პარიზში, "Maison de l'Art Nouveau", იმ დროისთვის სემუელ ბინის განკარგულებაში, სადაც გასაყიდად გამოფენილი იყო სხვადასხვა ნივთები, რომლებიც ამ განსაკუთრებულ დიზაინში იყო გადაწყვეტილი.
 
-არტ-ნუვოს ევოლუციამ კულმინაციას მიაღწია 1900 წელს პარიზში გამართულ უნივერსალურ მსოფლიო ექსპოზიციაზე, რომელშიც სტილი "მოდერნი" ტრიუმფს განიცდის ყველა ფორმასა და მედიუმში. მიმდინარეობამ სავარაუდოდ აპოგეას მიაღწია 1902 წლის [[ტურინი|ტურინის]] ექსპოზიციაზე იტალიაში, სადაც დიზაინერები თითქმის ყველა ევროპული ქვეყნიდან საკუთარ ნიმუშებს ექსკლუზიურად არტ-ნუვო სტილში წარადგენენ. არტ-ნუვო იყენებდა გვიანდელი მე-19 საუკუნის თითქმის ყველა ტექნოლოგიურ ინოვაციას, როგორიცაა გაშიშვლებული ლითონი და ვრცელი უსწორმასწორო ფორმის მინა არქიტექტურაში, თუმცა პირველი მსოფლიო ომის დაწყებისთვის არტ-ნუვოს ზედმიწევნით სტილიზებული დიზაინი, რომელიც თავისთავად საკმაოდ ძვირი ჯდებოდა, შეცვალა უფრო სწორხაზოვანმა, მართკუთხა მოდერნიზმმა, რომელიც უფრო იაფი და, როგორც მიიჩნევდნენ, უფრო აესთეტიური იყო წმინდა ინდუსტრიული თვალსაზრისით.
+არტ-ნუვოს ევოლუციამ კულმინაციას მიაღწია 1900 წელს პარიზში გამართულ უნივერსალურ მსოფლიო ექსპოზიციაზე, სადაც მოდერნი ტრიუმფს განიცდის ყველა ფორმასა და მედიუმში. მიმდინარეობამ სავარაუდოდ აპოგეას მიაღწია 1902 წლის [[ტურინი|ტურინის]] ექსპოზიციაზე იტალიაში, სადაც დიზაინერები თითქმის ყველა ევროპული ქვეყნიდან საკუთარ ნიმუშებს ექსკლუზიურად არტ-ნუვო სტილში წარადგენენ. არტ-ნუვო იყენებდა გვიანდელი მე-19 საუკუნის თითქმის ყველა ტექნოლოგიურ ინოვაციას, როგორიცაა გაშიშვლებული ლითონი და ვრცელი უსწორმასწორო ფორმის მინა არქიტექტურაში, თუმცა [[პირველი მსოფლიო ომი|პირველი მსოფლიო ომის]] დაწყებისთვის არტ-ნუვოს ზედმიწევნით სტილიზებული დიზაინი, რომელიც თავისთავად საკმაოდ ძვირი ჯდებოდა, შეცვალა უფრო სწორხაზოვანმა, მართკუთხა [[მოდერნიზმი|მოდერნიზმმა]], რომელიც უფრო იაფი და, როგორც მიიჩნევდნენ, უფრო აესთეტიური იყო წმინდა ინდუსტრიული თვალსაზრისით.
 
-პარიზის მეტროს შესასვლელები ჰექტორ გიმარდის დიზაინით 1899 და 1900 წლებში არტ-ნუვო მიმდინარეობის განსაკუთრებით აღსანიშნავი და განთქმული ნიმუშებია.
+[[პარიზის მეტრო|პარიზის მეტროს]] შესასვლელები ჰექტორ გიმარდის დიზაინით 1899 და 1900 წლებში არტ-ნუვო მიმდინარეობის განსაკუთრებით აღსანიშნავი და საქვეყნოდ ცნობილი ნიმუშებია.
 
 ==არტ-ნუვოს ხასიათი==
 ==არტ-ნუვო მედია==
