*Empty MediaWiki Message*

--- a/ბოსა-ნოვა.mw
+++ b/ბოსა-ნოვა.mw
@@ -1,5 +1,15 @@
 '''ბოსა-ნოვა''' (Bossa nova) ბრაზილიური მუსიკის სტილია, რომელიც 1950-იან წლებში შეიქმნა [[რიო-დე-ჟანეირო|რიო-დე-ჟანეიროს]] [[კოპაკაბანა|კოპაკაბანასა]] და [[იპანემა|იპანემას]] ზღვისპირა უბნებში მცხოვრები სტუდენტებისა და მუსიკოსების მიერ. სახელი დაახლოებით ნიშნავს: "ახალი რითმი" ან "ახალი გზა". ბრაზილიაში თავდაპირველად ეს ჟანრი ცნობილი გახდა [[გილბერტო, ჟოაო|ჟოაო გილბერტოს]] შესრულებული [[ჟობიმი, ანტონიო კარლოს|ანტონიო კარლოს ჟობიმისა]] და [[მორაესი, ცინისიუს დე|ცინისიუს დე მორაესის]] კომპოზიციით "ჩეგა დე სოდადე" (პორტ. Chega de Saudade), რომლის ჩანაწერი [[1958]] წელს გამოვიდა. 
 
+==წარმოშობა და ისტორია==
+==ინსტრუმენტები==
+==სტრუქტურა==
+==ტერმინის წარმოშობა==
+==ცნობილი ბოსა ნოვას მიმდევრები==
+==რესურსები ინტერნეტში==
+
+
+
+
 {{ესკიზი}}
 
 [[კატეგორია:ბოსა-ნოვა]]
