/* წარმოშობა და ისტორია */

--- a/ბოსა-ნოვა.mw
+++ b/ბოსა-ნოვა.mw
@@ -1,6 +1,12 @@
 '''ბოსა-ნოვა''' (Bossa nova) ბრაზილიური მუსიკის სტილია, რომელიც 1950-იან წლებში შეიქმნა [[რიო-დე-ჟანეირო|რიო-დე-ჟანეიროს]] [[კოპაკაბანა|კოპაკაბანასა]] და [[იპანემა|იპანემას]] ზღვისპირა უბნებში მცხოვრები სტუდენტებისა და მუსიკოსების მიერ. სახელი დაახლოებით ნიშნავს: "ახალი რითმი" ან "ახალი გზა". ბრაზილიაში თავდაპირველად ეს ჟანრი ცნობილი გახდა [[გილბერტო, ჟოაო|ჟოაო გილბერტოს]] შესრულებული [[ჟობიმი, ანტონიო კარლოს|ანტონიო კარლოს ჟობიმისა]] და [[მორაესი, ცინისიუს დე|ცინისიუს დე მორაესის]] კომპოზიციით "ჩეგა დე სოდადე" (პორტ. Chega de Saudade), რომლის ჩანაწერი [[1958]] წელს გამოვიდა. 
 
 ==წარმოშობა და ისტორია==
+მუსიკას ფესვები სამბაში აქვს თუმცა იფრო კომპლექსურია ჰარმონიის მხრივ და ნაკლებად პერკუსიული. ჟანრზე დიდი ზეგავლენა იქონია [[ქულ-ჯაზი|ქულ-ჯაზმა]] და მასიურად პოპულარული გახდა [[ბრაზილია|ბრაზილიასა]] და მთელს [[ლათინური ამერიკა|ლათინურ ამერიკაში]]. ჟანრს ასევე საკმაოდ ვრცელი საერთაშორისო წარმატება ჰქონდა 1959 წელს კინოფილმი "შავი ორფეუსი"-ს და 1960 წელს [[გეტსი, სტან|სტან გეტსის]] ჩანაწერების გამოსვლის შემდეგ.
+
+შეიძლება თუ არა ბოსა-ნოვას დაერქვას მიმდინარეობა დიდი დებატების საგანია. თუმცა, საყოველთაოდ აღიარებულია, რომ ამ ჟანრის წარმოშობა დიდი მოვლენა იყო ბრაზილიის მუსიკის იტორიაში. მან შემოიტანა მუსიკაში კომპლექსური ჰარმონიები, დაახლოვა ლირიკა მუსიკასთან, ხოლო არანჟირება - მუსიკალურ ფორმასთან. მან თავის მხრივ ზეგავლენა იქონია შედარებით გვიანდელ მიმდინარეობაზე [[ტროპიკალია]]. ბოსა ნოვას რეპერტუარი ძირიტადად შედგება სიმღერებისგან, მაშინ როცა მსგავსი ხმოვანების ინსტრუმენტალური მუსიკა [[სამბა-ჯაზი|სამბა-ჯაზის]] ჟანრს მიეკუთვნება.
+
+უეჭველად ბოსა ნოვას ყველაზე ცნობილი სიმღერა არის [[ჟობიმი, ანტონიო კარლოს|ანტონიო კარლოს ჟობიმის]] "გოგონა იპანემადან" (A Garota de Ipanema), პორტუგალიურ და ინგლისურ ვარიანტებში.
+
 ==ინსტრუმენტები==
 ==სტრუქტურა==
 ==ტერმინის წარმოშობა==
