*Empty MediaWiki Message*

--- a/პოლონეთი.mw
+++ b/პოლონეთი.mw
@@ -18,7 +18,7 @@
 '''[[სახელმწიფო ენა]]''': [[პოლონური ენა|პოლონური]]<br/>
 '''[[პოლონეთის პრეზიდენტი| პრეზიდენტი]]''': ალექსანდრ კვასნიევსკი<br/>
 '''[[პოლონეთის პრემიერ-მინისტრი|პრემიერ-მინისტრი]]''': კაზიმიერზ მარჭინკიევიჩ<br/>
-'''[[სახელმწიფო ჰიმნი]]''':  ”Mazurek Dabrowskie” <br/>
+'''[[სახელმწიფო ჰიმნი]]''':  ”Mazurek Dabrowskiego” <br/>
 '''[[ვალუტა]]''': [[ზლოტი]]<br/>
 '''[[დროის ზონა]]''':  UTC +  1<br/>
 '''[[ინტერნეტის პირველადი დომენი|ინტერნეტის დომენი]]''': PL<br/>
