*Empty MediaWiki Message*

--- a/ოდესა.mw
+++ b/ოდესა.mw
@@ -36,3 +36,34 @@
 |- bgcolor="#FFFFFF"
 ! colspan="2" align="center" | პოტიომკინის საფეხურები (აშენდა 1834–1841), ცნობილი [[აიზენშტაინი, სერგეი|სერგეი აიზენშტაინის]] გახმაურებული ფილმიდან "Броненосец Потёмкин"
 |}
+
+'''ოდესა'' (უკრ.: Одеса, Odesa; რუს.: Одесса) ქალაქია სამხრეთ-დასავლეთ [[უკრაინა|უკრაინაში]], უმნიშვნელოვანესი პორტი [[შავი ზღვა|შავ ზღვაზე]] და ოდესის ობლასტის ადმინისტრაციული ცენტრი. ქალაქის მოსახლეობა 2004 წლის მონაცემებით იყო 1.012.500 ადამიანი.
+
+
+[[კატეგორია:უკრაინის ქალაქები]]
+
+[[bg:Одеса]]
+[[da:Odessa]]
+[[de:Odessa]]
+[[es:Odesa]]
+[[eo:Odeso]]
+[[fr:Odessa]]
+[[ko:오데사]]
+[[io:Odessa]]
+[[he:אודסה]]
+[[la:Odessus]]
+[[lv:Odesa]]
+[[lt:Odesa]]
+[[lb:Odessa]]
+[[mo:Одесса]]
+[[nl:Odessa (stad)]]
+[[ja:オデッサ (都市)]]
+[[no:Odessa]]
+[[pl:Odessa]]
+[[pt:Odessa]]
+[[ro:Odessa]]
+[[ru:Одесса]]
+[[sl:Odesa]]
+[[fi:Odessa]]
+[[sv:Odessa]]
+[[uk:Одеса (Україна)]]
