*Empty MediaWiki Message*

--- a/ოდესა.mw
+++ b/ოდესა.mw
@@ -2,7 +2,7 @@
 |- bgcolor="#FFFFFF" align="center"
 ! colspan="2" | ოდესა - Одеса
 |- bgcolor="#FFFFFF"
-| align="center" colspan=2 | [[სურათი:Odesa emblem.gif|190px|ოდესის ემბლემა]]&nbsp;&nbsp;&nbsp;
+| align="center" colspan=2 | [[სურათი:Odesa emblem.gif|100px|ოდესის ემბლემა]]&nbsp;&nbsp;&nbsp;
 |- bgcolor="#FFFFFF"
 ! colspan="2" | რუქა
 |- bgcolor="#FFFFFF"
@@ -39,6 +39,7 @@
 
 '''ოდესა'' (უკრ.: Одеса, Odesa; რუს.: Одесса) ქალაქია სამხრეთ-დასავლეთ [[უკრაინა|უკრაინაში]], უმნიშვნელოვანესი პორტი [[შავი ზღვა|შავ ზღვაზე]] და ოდესის ობლასტის ადმინისტრაციული ცენტრი. ქალაქის მოსახლეობა 2004 წლის მონაცემებით იყო 1.012.500 ადამიანი.
 
+{{ესკიზი}}
 
 [[კატეგორია:უკრაინის ქალაქები]]
 
