--- a/დემეტრე_II_თავდადებული.mw
+++ b/დემეტრე_II_თავდადებული.mw
@@ -6,7 +6,7 @@
 
 დემეტრე II-ის დროს ქვეყანა კიდევ უფრო დაქვეითდა ეკონომიურად, გაიზარდა მონღოლური გადასახადები, მომრავლდნენ მათხოვარ-დავრდომილები და ქვრივ-ობლები, შეთხელდა მწარმოებელი მოსახლეობა, გამწვავდა აგრარული ურთიერთობა და ამ ნიადაგზე - კლასობრივი და შინაკლასობრივი ბრძოლა. განსაკუთრებით აოხრებული იყო კახეთი და ჰერეთი. საერთო გაჭირვებას ზედ დაერთო მიწისძვრა, რომელიც მთელი თვე გაგრძელდა. მოსახლეობაში, განსაკუთრებით ფეოდალურ ზედაფენებში, ფეხს იკიდებდა მონღოლური წეს-ჩვევები (მრავალცოლიანობა და სხვა). დემეტრე II-ის სახელმწიფოებრივი ღონისძიებანი (უკაცური ადგილების ხელახლა დასახლება, ეკლესიისათვის უძრავი ქონების ჩამორთმევა და სხვ.) სასურველ შედეგებს ვერ იძლეოდა.
 
-დემეტრე II იძულებული იყო მონაწილეობა მიეღო ილხანთა სახელმწიფოში ატეხილ დინასტიურ ბრძოლებში: [[1282]] საქართველოს ლაშქრით [[ხორასანი|ხორასანში]] იბრძოდა აჰმად-ყაენის (1282-84) მხარეზე აბაღას ზის არღუნის წინააღმდეგ; 1284-იდან ახალი ყაენის არღუნის (1284-91) მხარეზე იყო. ყაენის პირველ ვაზირ ბუღასთან მეგობრპბისა და მოყვრობის წყალობით (ბუღას შვილს ცოლად ჰყავდა დემეტრე II-ის ასული რუსუდანი) გაძლიერდა დემეტრე II-ის ავტორიტეტი და გავლენა საქართველოში. [[1288]] გამომჟღავნდა არღუნის წინააღმდეგ შეთქმულება. მისი მეთაურობა ბუღას დააბრალეს. ბუღა და მისი ნათესავ-მეგობრები სიკვდილით დასაჯეს. დემეტრე II, როგორც ბუღას მეგობარი, ყაენმა დაიბარა. მეფემ დარბაზი (სამეფო საბჭო) მოიწვია, რომელმაც ურჩია ურდოში არ წასულიყო და მთებში გახიზნულიყო. დემეტრე II დარბაზს არ დაეთანხმა იმ მოტივით, რომ ურდოში წაუსვლელობას მონღოლების მიერ უბრალო ხალხის გაჟლეტა და ქვეყნის აოხრება მოჰყვებოდა. ურდოში დემეტრე II-მ თავის სცადა თავის მართლება. რადგან შეთქმულებაში დემეტრე II-ის მონაწილეობის საბუთები არ იყო, ყაენს ვერ გადაეწყვიტა მისი სიკვდილით დასჯა. მეფის სიკვდილით დასჯაში გადამწყვეტი როლი ითამაშა სადუნ მანკაბერდელის ძემ ამირსპასალმა [[ხუტლუბუღა|ხუტლუბუღამ]], განაწყენებულმა იმით, რომ სადუნის გარდაცვალების ([[1281]]) შემდეგ მეფემ ათაბაგობა ტარსაიჭ ორბელს უწყალობა. ყაენის ბრძანებით დემეტრე II-ს თავი მოჰკვეთეს. შთამომავლობამ მას თავდადებული უწოდა.
+დემეტრე II იძულებული იყო მონაწილეობა მიეღო ილხანთა სახელმწიფოში ატეხილ დინასტიურ ბრძოლებში: [[1282]] საქართველოს ლაშქრით [[ხორასანი|ხორასანში]] იბრძოდა აჰმად-ყაენის (1282-84) მხარეზე აბაღას ზის არღუნის წინააღმდეგ; 1284-იდან ახალი ყაენის არღუნის (1284-91) მხარეზე იყო. ყაენის პირველ ვაზირ ბუღასთან მეგობრპბისა და მოყვრობის წყალობით (ბუღას შვილს ცოლად ჰყავდა დემეტრე II-ის ასული რუსუდანი) გაძლიერდა დემეტრე II-ის ავტორიტეტი და გავლენა საქართველოში. [[1288]] გამომჟღავნდა არღუნის წინააღმდეგ შეთქმულება. მისი მეთაურობა ბუღას დააბრალეს. ბუღა და მისი ნათესავ-მეგობრები სიკვდილით დასაჯეს. დემეტრე II, როგორც ბუღას მეგობარი, ყაენმა დაიბარა. მეფემ დარბაზი (სამეფო საბჭო) მოიწვია, რომელმაც ურჩია ურდოში არ წასულიყო და მთებში გახიზნულიყო. დემეტრე II დარბაზს არ დაეთანხმა იმ მოტივით, რომ ურდოში წაუსვლელობას მონღოლების მიერ უბრალო ხალხის გაჟლეტა და ქვეყნის აოხრება მოჰყვებოდა. ურდოში დემეტრე II-მ თავის სცადა თავის მართლება. რადგან შეთქმულებაში დემეტრე II-ის მონაწილეობის საბუთები არ იყო, ყაენს ვერ გადაეწყვიტა მისი სიკვდილით დასჯა. მეფის სიკვდილით დასჯაში გადამწყვეტი როლი ითამაშა სადუნ მანკაბერდელის ძემ ამირსპასალმა [[ხუტლუბუღა|ხუტლუბუღამ]], განაწყენებულმა იმით, რომ სადუნის გარდაცვალების ([[1281]]) შემდეგ მეფემ ათაბაგობა [[ორბელი, ტარსაიჭ|ტარსაიჭ ორბელს]] უწყალობა. ყაენის ბრძანებით დემეტრე II-ს თავი მოჰკვეთეს. შთამომავლობამ მას თავდადებული უწოდა.
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:საქართველოს მეფეები]]
