--- a/ოდესა.mw
+++ b/ოდესა.mw
@@ -34,10 +34,10 @@
 |- bgcolor="#FFFFFF"
 | align="center" colspan=2 | [[სურათი:Potemkinstairs.jpg|300px|პოტიომკინის საფეხურები]]
 |- bgcolor="#FFFFFF"
-! colspan="2" align="center" | პოტიომკინის საფეხურები (აშენდა 1834–1841), <br/>ცნობილი [[ეიზენშტეინი, სერგეი|სერგეი ეიზენშტეინის]] <br/>გახმაურებული ფილმიდან "Броненосец Потёмкин"
+! colspan="2" align="center" | პოტიომკინის საფეხურები (აშენდა 1834–1841), <br/>ცნობილი [[ეიზენშტეინი, სერგეი|სერგეი ეიზენშტეინის]] <br/>გახმაურებული ფილმიდან "ჯავშნოსანი პოტიომკინი"
 |}
 
-'''ოდესა'' (უკრ.: Одеса, Odesa; რუს.: Одесса) ქალაქია სამხრეთ-დასავლეთ [[უკრაინა|უკრაინაში]], უმნიშვნელოვანესი პორტი [[შავი ზღვა|შავ ზღვაზე]] და ოდესის ობლასტის ადმინისტრაციული ცენტრი. ქალაქის მოსახლეობა 2004 წლის მონაცემებით იყო 1.012.500 ადამიანი.
+'''ოდესა'' (უკრ.: Одеса, Odesa; რუს.: Одесса) ქალაქია სამხრეთ-დასავლეთ [[უკრაინა|უკრაინაში]], უმნიშვნელოვანესი პორტი [[შავი ზღვა|შავ ზღვაზე]] და ოდესის ოლქის ადმინისტრაციული ცენტრი. ქალაქის მოსახლეობა 2004 წლის მონაცემებით იყო 1.012.500 ადამიანი.
 
 {{ესკიზი}}
 
