--- a/სერგეი_ეიზენშტეინი.mw
+++ b/სერგეი_ეიზენშტეინი.mw
@@ -1,7 +1,8 @@
 [[სურათი:Sergei Eisenstein with skull.jpg|thumb|250px|სერგეი ეიზენშტეინი]]
 '''სერგეი მიხაილოვიჩ ეიზენშტეინი''' (რუს.: Сергей Михайлович Эйзенштейн, ლატვ.: Sergejs Eizenšteins) (*[[23 იანვარი]], [[1898]] – [[11 თებერვალი]], [[1948]]) რევოლიუციური საბჭოთა თეატრალური სცენური დიზაინერი, კინო-რეჟისორი და კინო თეორეტიკოსი განთქმული მისი მუნჯი ფილმებით "გაფიცვა", "პოტიომკინი" და "ოქტომბერი", რომელმაც განსაზღვრა ადრეული დოკუმენტური ფილმის განვითარების მიმართულება მის მიერ მონტაჟში ინოვაციური ხერხების დანერგვის შედეგად.
 
-==ადრეული წლები==
+==შეხედულებანი==
+
 ==ევროპა და ჰოლივუდი==
 ==Que Viva Mexico!==
 ==აშშ==
