--- a/სერგეი_ეიზენშტეინი.mw
+++ b/სერგეი_ეიზენშტეინი.mw
@@ -1,6 +1,11 @@
 [[სურათი:Sergei Eisenstein with skull.jpg|thumb|250px|სერგეი ეიზენშტეინი]]
 '''სერგეი მიხაილოვიჩ ეიზენშტეინი''' (რუს.: Сергей Михайлович Эйзенштейн, ლატვ.: Sergejs Eizenšteins) (*[[23 იანვარი]], [[1898]] – [[11 თებერვალი]], [[1948]]) რევოლიუციური საბჭოთა თეატრალური სცენური დიზაინერი, კინო-რეჟისორი და კინო თეორეტიკოსი განთქმული მისი მუნჯი ფილმებით "გაფიცვა", "პოტიომკინი" და "ოქტომბერი", რომელმაც განსაზღვრა ადრეული დოკუმენტური ფილმის განვითარების მიმართულება მის მიერ მონტაჟში ინოვაციური ხერხების დანერგვის შედეგად.
 
+==ადრეული ბიოგრაფია==
+ეიზენშტეინი დაიბადა [[რიგა|რიგაში]], [[ლატვია]]. მამამისი, მიხაილ ეიზენშტეინი, ებრაული წარმოშობის გერმანელი ინჟინერი იყო; დედა, ჯულია, რუსი ჰყავდა.
+
+დაამთავრა რიგის რეალური სასწავლებელი, შემდეგ სწავლობდა პეტროგრადის სამოქალაქო ინჟინერთა ინსტიტუტში, პრაქტიკა გაიარა სახელმწიფო უმაღლეს სარეჟისორო სახელოსნოებში (ГВЫРМ); იყო თეატრის "პროლეტკულტურა" რეჟისორი; სრულიად რუსეთის კინოსარეჟისორო ინსტიტუტის (ВГИК) პროფესორი; კინოს თეორიაში ფუნდამენალურ ნაშრომთა ავტორი.
+
 ==შეხედულებანი==
 
 ==ევროპა და ჰოლივუდი==
