--- a/სერგეი_ეიზენშტეინი.mw
+++ b/სერგეი_ეიზენშტეინი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Sergei Eisenstein with skull.jpg|thumb|250px|სერგეი ეიზენშტეინი]]
-'''სერგეი მიხაილოვიჩ ეიზენშტეინი''' (რუს.: Сергей Михайлович Эйзенштейн, ლატვ.: Sergejs Eizenšteins) (*[[23 იანვარი]], [[1898]], [[რიგა]] ―   †   [[11 თებერვალი]], [[1948]], [[მოსკოვი]]) რევოლიუციური საბჭოთა თეატრალური სცენური დიზაინერი, კინორეჟისორი და კინო თეორეტიკოსი განთქმული მისი მუნჯი ფილმებით "გაფიცვა", "პოტიომკინი" და "ოქტომბერი", რომელმაც განსაზღვრა ადრეული დოკუმენტური ფილმის განვითარების მიმართულება მის მიერ მონტაჟში ინოვაციური ხერხების დანერგვის შედეგად.
+'''სერგეი მიხაილოვიჩ ეიზენშტეინი''' (რუს.: Сергей Михайлович Эйзенштейн, ლატვ.: Sergejs Eizenšteins) (*[[23 იანვარი]], [[1898]], [[რიგა]] ―   †   [[11 თებერვალი]], [[1948]], [[მოსკოვი]]) რევოლიუციური საბჭოთა თეატრალური სცენური დიზაინერი, კინორეჟისორი და კინო თეორეტიკოსი განთქმული მისი მუნჯი ფილმებით "გაფიცვა", "ჯავშნოსანი პოტიომკინი" და "ოქტომბერი", რომელმაც განსაზღვრა ადრეული დოკუმენტური ფილმის განვითარების მიმართულება მის მიერ მონტაჟში ინოვაციური ხერხების დანერგვის შედეგად.
 
 ==ადრეული ბიოგრაფია==
 ეიზენშტეინი დაიბადა [[რიგა|რიგაში]], [[ლატვია]]. მამამისი, მიხაილ ეიზენშტეინი, ებრაული წარმოშობის გერმანელი ინჟინერი იყო; დედა, ჯულია, რუსი ჰყავდა.
