--- a/რიგა.mw
+++ b/რიგა.mw
@@ -1,4 +1,4 @@
-{| 
+{| border="0" cellpadding="2" cellspacing="1" align="right" style="margin-left:1em; font-size:95%; background:#B3B3B3;"
 | bgcolor="#336699" align="center" colspan="2"| <font color="#FFFFFF"> '''Rīgas pilsēta'''
 |-
 |colspan="2" align=center | [[სურათი:Liels gerbonis.gif|150px|გერბი]]
