*Empty MediaWiki Message*

--- a/პორტ-ო-პრენსი.mw
+++ b/პორტ-ო-პრენსი.mw
@@ -19,6 +19,7 @@
 
 [[კატეგორია:ჩრდილოეთ ამერიკის დედაქალაქები]]
 
+[[bg:Порт о Пренс]]
 [[ca:Port-au-Prince]]
 [[da:Port-au-Prince]]
 [[de:Port-au-Prince]]
