*Empty MediaWiki Message*

--- a/რიგა.mw
+++ b/რიგა.mw
@@ -20,8 +20,21 @@
 
 რიგის ისტორიული ცენტრი [[იუნესკო|იუნესკოს]] მსოფლიო კულტურული მემკვირეობის ძეგლთა სიაში შეტანილი. ქალაქი განსაკუთრებით გამოირჩევა ინტენსიური [[არტ-ნუვო]] (გერმ. Jugendstil) არქიტექტურით და მას ამ მხრივ მხოლოდ [[ვენა]], [[პრაღა]] და [[ბარსელონა]] თუ შეედრებიან.
 
+==ისტორია==
+[[სურათი:Riga dom.jpg|thumb|left|რიგის კათედრალის თავი მოჩანს მის ვიწრო ქუჩებს შორის]]
+რიგა მდებარეობს ლივსთა, ძველი ფინური ტომი, უძველესი ნამოსახლარის ადგილზე, მდინარეების დაუგავასა და რიზდენეს შესართავთან. რიზდენეს თავდაპირველად რიგის მდინარე ერქვა, რომელიც ადრე ბუნებრივ ყურეს ქმნიდა რიგის ტბასთან, თუმცა არცერთი მათგანი დღეს არ არსებობს. ზოგიერთი ცნობით ქალაქს სახელი მდინარე რიგის გამო დაერქვა.
 
-{{ესკიზი}}
+თანამედროვე ქალაქის დაფუძენას ისტორიკოსები გერმანელ ვაჭრებს, მეომრებსა და ჯვაროსნებს უკავშირებენ, რომლებიც ლატვიაში მე-12 საუკუნის მეორე ნახევარში ჩამოვიდნენ, ნაწილობრივ მწირედ დასახლებული რეგიონით დახარბებულები, პოტენციური ახალი გასაღების ბაზრისა და მისიონერთა მიერ ადგილოვბრივი მოსახლეობის ქრისტიანობაზე მოქცევითვის.
+
+გერმანელმა ვაჭრებმა მცირე სავაჭრო მისადგომი დააარსეს მდინარე ლივთან 1158 წელს. აუგუსტინელმა ბერმა მაინჰარდმა კი აქ დაახ. 1190 წელს მონასტერი ააგო.
+
+ეპისკოპოსი ალბერტი მისი ბიძის ჰარტვიგის, ბრემენისა და ჰამბურგის არქიეპისკოპოსის, მიერ 1199 წელს ლივონიის ეპისკოპოსად დაინიშნა. ის რიგაში 1201 წელს ჩამოდის 23 გემითა და 1500-ზე მეტი ჯვაროსანით, და რიგას საკუთარ საეპისკოპოსოდ ხდის. მან დააარსა ვილონიელ ხმლის ძმათა ორდენი და რიგას ქალაქის სტატუსი უწყალობა იმავე წელს. ალბერტი წარმატებას აღწევს ლივსთა მეფის ქრისტიანობაზე მოქცევაში, თუმცა მას თითქმის სამი ათეული წელი დასჭირდა ლივონიაზე (გერმ. ლივლანდი) სრული კონტროლის მისაღწევად. შედეგად, რიგა ლივონისა და პრუსიასთან ერთად წმინდა რომის (გერმანული) იმპერიის ქვეშევრდომი ხდება. გაცილებით მოგვიანებით მარტინ ლუთერის დროს, რიგა, ლივონია და პრუსია პროტესტანებად მოექცნენ.
+
+ამ პერიოდიდან რიგის როგორც ბალტიის ტომებთან და რუსეთთან ვაჭრობის კარიბჭის მნიშვნელობა იზრდება. 1282 წელს რიგა ჰანსეატიკის ლიგის წევრი ხდება. ჰანსა ვაჭართა ასოციაციის განვითარების გამო ჩრდილოეთ გერმანელთა და ბალტიის ქალაქთა თავისუფალი სავაჭრო და პოლიტიკური გაერთიანების შედეგად წარმოიშვა. მისი ეკონომიკური პროტექციონისტული პოლიტიკის წყალობით, რომლითაც გერმანელი წევრები უპირატესობით სარგებობდნენ, ლიგა საკმაოდ წარმატებული გამოდგა, თუმცა ექსკლუზიონისტურმა პოლიტიკამ კონკურენტების წარმოქმნასაც შეუწყო ხელი. ლიგის ბოლო დიეტი 1669 წელს შეიკრიბა, თუმცა ამ დროისთვის მათი ძალები საკმაოდ შერყეული იყო და მე-14 საუკუნის ბოლოსთვის პოლიტიკურმა გაერთიანებებმა ლიტვასა და პოლონეთს, ასევე შვედეთს, დანიასა და ნორვეგიას შორის მათი გავლენა შეავიწროვა. მიუხედავად ამისა, ჰანსამ გადამწყვეტი როლი ითამაშა რიგის პოლიტიკურ და ეკონომიკურ სტაბილურობაში, რაც მას საშუალებას აძლევს გაუძლოს გვიანდელი ისტორიის ქარცეცხლს, თითქმის დღემდე.
+
+
+
+{{ითარგმნება}}
 
 [[კატეგორია:ლატვიის ქალაქები]]
 [[კატეგორია:ევროპის დედაქალაქები]]
