*Empty MediaWiki Message*

--- a/რიგა.mw
+++ b/რიგა.mw
@@ -32,7 +32,11 @@
 
 ამ პერიოდიდან რიგის როგორც ბალტიის ტომებთან და რუსეთთან ვაჭრობის კარიბჭის მნიშვნელობა იზრდება. 1282 წელს რიგა ჰანსეატიკის ლიგის წევრი ხდება. ჰანსა ვაჭართა ასოციაციის განვითარების გამო ჩრდილოეთ გერმანელთა და ბალტიის ქალაქთა თავისუფალი სავაჭრო და პოლიტიკური გაერთიანების შედეგად წარმოიშვა. მისი ეკონომიკური პროტექციონისტული პოლიტიკის წყალობით, რომლითაც გერმანელი წევრები უპირატესობით სარგებობდნენ, ლიგა საკმაოდ წარმატებული გამოდგა, თუმცა ექსკლუზიონისტურმა პოლიტიკამ კონკურენტების წარმოქმნასაც შეუწყო ხელი. ლიგის ბოლო დიეტი 1669 წელს შეიკრიბა, თუმცა ამ დროისთვის მათი ძალები საკმაოდ შერყეული იყო და მე-14 საუკუნის ბოლოსთვის პოლიტიკურმა გაერთიანებებმა ლიტვასა და პოლონეთს, ასევე შვედეთს, დანიასა და ნორვეგიას შორის მათი გავლენა შეავიწროვა. მიუხედავად ამისა, ჰანსამ გადამწყვეტი როლი ითამაშა რიგის პოლიტიკურ და ეკონომიკურ სტაბილურობაში, რაც მას საშუალებას აძლევს გაუძლოს გვიანდელი ისტორიის ქარცეცხლს, თითქმის დღემდე.
 
-
+==ღირშესანიშნაობანი==
+==რიგის ისტორიული უბნები==
+==ბიზნესი და კომერცია==
+==ცნობილი რიგელები==
+==რესურსები ინტერნეტში==
 
 {{ითარგმნება}}
 
