--- a/ოდესა.mw
+++ b/ოდესა.mw
@@ -14,7 +14,7 @@
 |- bgcolor="#FFFFFF"
 |[[ოლქი]]: || [[ოდესის ოლქი]]
 |- bgcolor="#FFFFFF"
-|[[საკოორდინატო სისტემა|გეოგრ. მდებარეობა]]: || 46°28′N 30°44′E
+|[[საკოორდინატო სისტემა|კოორდ.]]: || 46°28′N 30°44′E
 |- bgcolor="#FFFFFF"
 |[[ფართობი]]: || 163.0 კმ²
 |- bgcolor="#FFFFFF"
@@ -37,7 +37,14 @@
 ! colspan="2" align="center" | პოტიომკინის საფეხურები (აშენდა 1834–1841), <br/>ცნობილი [[ეიზენშტეინი, სერგეი|სერგეი ეიზენშტეინის]] <br/>გახმაურებული ფილმიდან "ჯავშნოსანი პოტიომკინი"
 |}
 
-'''ოდესა'' (უკრ.: Одеса, Odesa; რუს.: Одесса) ქალაქია სამხრეთ-დასავლეთ [[უკრაინა|უკრაინაში]], უმნიშვნელოვანესი პორტი [[შავი ზღვა|შავ ზღვაზე]] და ოდესის ოლქის ადმინისტრაციული ცენტრი. ქალაქის მოსახლეობა 2004 წლის მონაცემებით იყო 1.012.500 ადამიანი.
+'''ოდესა''' (უკრ.: Одеса, Odesa; რუს.: Одесса) ქალაქია სამხრეთ-დასავლეთ [[უკრაინა|უკრაინაში]], უმნიშვნელოვანესი პორტი [[შავი ზღვა|შავ ზღვაზე]] და ოდესის ოლქის ადმინისტრაციული ცენტრი. ქალაქის მოსახლეობა 2004 წლის მონაცემებით იყო 1.012.500 ადამიანი.
+
+ოდესა 1819-1858 წლებში თავისუფალი პორტი (პორტო ფრანკო) იყო. საბჭოთა პერიოდში სსრკ-ის უმნიშვნელოვანესი სავაჭრო პორტი და სამხედრო სანაოსნო ბაზა გახდა. 2000 წლის 1 იანვარს ოდესის სავაჭრო პორტის კარანტინის მისადგომი თავისუფალ პორტად და თავისუფალ სავაჭრო ზონად გამოცხადდა 25 წლის ვადით.
+
+ოდესა თბილ წყალზე მდებარეობს, თუმცა მისი სამხედრო მნიშვნელობა საკმაოდ შეზღუდულია. თურქეთის მიერ დარდანელის სრუტესა და ბოსფორზე კონტროლის დაწესებამ ნატოს შესაძლებლობა მისცა ოდესიდან ხმელთაშუა ზღვაზე მიმოსვლა შეეზღუდა. ქალაქს ორი მნიშვნელოვანი პორტი აქვს: თავად ოდესა და იუჟნი (საერთასორისო მნიშვნელობის ნავთობ ტერმინალი), რომელიც ქალაქის გარეუბანში მდებარეობს. კიდევ ერთი მნიშვნელოვანი პორტი, ილიჩევსკი, იმავე ობლასტში მდებარეობს, ოდესის სამხრეთ-დასავლეთით. ერთობლიობაში ეს სამი პორტი და სარკინიგზო სისტემა მნიშვნელოვან სატრანსპორტო კვანძს წარმოადგენს. ოდესის ნავთობ და ქიმიურ-გადამმუშავებელი ქარხნები რუსეთისა და ევროპის ქსელებთან სტრატეგიული მნიშვნელობის სადენებით არის დაკავშირებული.
+
+ოდესა სიდიდით მეხუთე ქალაქია უკრაინაში და ასევე მისი ყველაზე მნიშვნელოვანი სავაჭრო ცენტრი. მე-19 საუკუნეში ის იყო იმპერიული რუსეთის მესამე ქალაქი [[მოსკოვი|მოსკოვისა]] და [[სანკტ-პეტერბურგი|სანკტ-პეტერბურგის]] შემდეგ. ქალაქის ისტორიულ არქიტექტურას უფრო ხმელთაშუა იერი დაჰკრავს ვინემ რუსული, ფრანგული და იტალიური მიმდინარეობების გავლენით. ოდესისთვის ყოველთვის იყო დამახასიათებელი თავისუფალი ნება და ირონიული იუმორი, შესაძლოა მისი მდებარეობისა და მულტიკულტურიზმის წყალობით.
+
 
 {{ესკიზი}}
 
