*Empty MediaWiki Message*

--- a/დიმიტრი_ყიფიანი.mw
+++ b/დიმიტრი_ყიფიანი.mw
@@ -3,7 +3,7 @@
 
 ==ბიოგრაფია==
 
-[[1830]] წელს დაამთავრა კეთილშობილთა სასწავლებელი და იქვე დაინიშნა მასწავლებლად. [[1832]] წლის [[შეთქმულება 1832 წლის | შეთქმულებაში ]] მონაწილეობის გამო [[ვოლოგდა | ვოლოგდაში]] გადაასახლეს. აქ [[გუბერნატორი | გუბერნატორის]] კანცელარიაში განაწესეს ([[1835]]), [[1837]] წელს [[საქართველო | საქართველოში]] დაბრუნდა. ამ დროიდან [[1864]]-მდე იყო მთავარმართლებლის კანცელარიაში სხვადასხვა თანამდებობაზე. [[1862]] წლამდე მეფისნაცვლის საბჭოს წევრი, [[1859]]-[[1867]] წლებში სამეგრელოს მთავრის ქონება-მამულის მეურვე. [[1864]]-[[1870]] თბილისის გუბერნიის, ხოლო [[1885]]-[[1886]] ქუთაისის გუბერნიის თავადაზნაურობის წინამძღოლი. [[1876]]-[[1879]] თბილისის ქალაქისთავი. [[1886]] წელს თბილისის სასულიერო სემინარიის რექტორის ჩუდეცკის მკვლელობასთან დაკავშირებით საქართველოს ეგზარქოსმა პავლემ (ლებედევი) ქართველი ერი დასწყევლა. ყიფიანმა მას საქართველოს დატოვება მოსთხოვა. ამის გამო თანამდებობიდან გადააყენეს და იმავე წელს სტავროპოლში გადაასახლეს, სადაც მეფის აგენტებმა ვერაგულად მოკლეს.
+[[1830]] წელს დაამთავრა კეთილშობილთა სასწავლებელი და იქვე დაინიშნა მასწავლებლად. [[1832]] წლის [[შეთქმულება 1832 წლისა | შეთქმულებაში ]] მონაწილეობის გამო [[ვოლოგდა | ვოლოგდაში]] გადაასახლეს. აქ [[გუბერნატორი | გუბერნატორის]] კანცელარიაში განაწესეს ([[1835]]), [[1837]] წელს [[საქართველო | საქართველოში]] დაბრუნდა. ამ დროიდან [[1864]]-მდე იყო მთავარმართლებლის კანცელარიაში სხვადასხვა თანამდებობაზე. [[1862]] წლამდე მეფისნაცვლის საბჭოს წევრი, [[1859]]-[[1867]] წლებში სამეგრელოს მთავრის ქონება-მამულის მეურვე. [[1864]]-[[1870]] თბილისის გუბერნიის, ხოლო [[1885]]-[[1886]] ქუთაისის გუბერნიის თავადაზნაურობის წინამძღოლი. [[1876]]-[[1879]] თბილისის ქალაქისთავი. [[1886]] წელს თბილისის სასულიერო სემინარიის რექტორის ჩუდეცკის მკვლელობასთან დაკავშირებით საქართველოს ეგზარქოსმა პავლემ (ლებედევი) ქართველი ერი დასწყევლა. ყიფიანმა მას საქართველოს დატოვება მოსთხოვა. ამის გამო თანამდებობიდან გადააყენეს და იმავე წელს სტავროპოლში გადაასახლეს, სადაც მეფის აგენტებმა ვერაგულად მოკლეს.
 
 
 ==მოღვაწეობა==
